script link fix it

--- a/index.html
+++ b/index.html
@@ -20,6 +20,6 @@
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae, veritatis deserunt necessitatibus dolorem accusantium natus blanditiis qui nesciunt voluptates! Architecto nesciunt provident quos id eum, dolores iusto voluptate quasi doloribus.
   </p>
 
-  <script type="module" src="app.js"></script>
+  <script src="app.js"></script>
 </body>
 </html>
